# DriftMonitor

./: .gitignore  README.md  pyproject.toml
docs/: PRD-v0.2.md  README.md
docs/plans/: 2026-06-15-vdm-phase0-spike.md  2026-06-15-vdm-phase1.1-capability-negotiation.md
docs/specs/: 2026-06-15-vdm-phase0-spike-design.md  2026-06-15-vdm-phase1.1-capability-negotiation-design.md
scripts/: setup_db.sh
src/vdm_spike/: __init__.py  conformance.py  core.py  corpus.py  embed.py  features.py  negotiation.py  ops.py  power.py  report.py  run.py  sampling.py  scenarios.py  store.py
src/vdm_spike/adapters/: __init__.py  base.py  fakes.py  pgvector.py  qdrant.py
src/vdm_spike/detectors/: __init__.py  distribution.py  retrieval.py
tests/: conftest.py  test_adapter_base.py  test_conformance.py  test_corpus.py  test_distribution.py  test_embed.py  test_evidently_crosscheck.py  test_fakes.py  test_features.py  test_gate.py  test_negotiation.py  test_ops.py  test_power.py  test_qdrant_adapter.py  test_report.py  test_retrieval.py  test_sampling.py  test_scenarios.py  test_smoke.py  test_store.py
