[project]
name = "vdm-spike"
version = "0.0.1"
description = "VDM Phase 0 drift-signal validation spike"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "matplotlib>=3.8",
    "evidently>=0.4.25",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vdm_spike"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
